Fix media placeholder visibility when using Spotlight mode (#1208)
* fix placeholder visibility when using spotlight mode

* remove duplicate code

--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -69,7 +69,7 @@
 
 // Needed until GB 6.9 is merged into core or backward support.
 // Hide the placeholder when not selected.
-.editor-block-list__block[data-type="coblocks/gallery-carousel"]:not(.is-selected) {
+.editor-block-list__block[data-type="coblocks/gallery-carousel"]:not(.is-selected):not(.is-focused) {
 		div.components-form-file-upload {
 			display: none;
 		} 
