--- a/src/blocks/gallery-masonry/styles/editor.scss
+++ b/src/blocks/gallery-masonry/styles/editor.scss
@@ -99,7 +99,7 @@
 
 // Needed until GB 6.9 is merged into core or backward support.
 // Hide the placeholder when not selected.
-.editor-block-list__block[data-type="coblocks/gallery-masonry"]:not(.is-selected) {
+.editor-block-list__block[data-type="coblocks/gallery-masonry"]:not(.is-selected):not(.is-focused)  {
 	div.components-form-file-upload {
 		display: none;
 	} 
